= Changelog for Redis::Objects

== 0.9.0 (6 Feb 2014)

* Ensure we don't double-unmarshal values, which could be a security issue [markijbema, nateware]

* HashKey#fetch now behaves more similarly to Ruby [datapimp]

* Add support for @sorted_set.merge and variadic zadd [hfwang]

* Add support for srandmember for sets [LYY]

* Handle @set << [] in an intelligent way [kitchen]

* Add multi-unshift functionality [nateware]

* Additional test coverage for @sorted_set.merge and other ops [nateware]

== 0.8.0 (9 Nov 2013)

* Refactor to modular include/extend approach to enable hooking and remove evals [nateware]

* Custom id field via redis_id_field :whatever [liuming]

* Support marshaling of sorted set key names for incr/decr [hfwang]

* Add support for pushing multiple values into a list [scranton]

* Fix problematic typo in HashKey#fill [johnmaxwell]

* Fix wrong parameter order for revrangebyscore method [FoGhost]

* Convert to using Bundler from Jeweler to manage gem [nateware]

== 0.7.0 (27 Feb 2013)

* Enable inheritance of Redis::Objects models [rossta]

* Finally fix require/autoload so "require 'redis/foo'" is not needed [nateware]

* Redis::Objects.redis= now properly sets subclass handles as expected [nateware]

* Add lib/redis-objects.rb for easier Gemfile require [notEthan]

* Fix wrong readme line, fix some indentation [giglemad]

== 0.6.1 (13 Dec 2012)

* Fixed error that incorrectly specified activerecord as a gem dep [nateware]

== 0.6.0 (13 Dec 2012)

* Add +@set.merge()+ method to add multiple members at once [hfwang] 

* Add +insert+ method to Redis::List instances [giglemad]

* Updated APIs for recent redis-server sort API compat [nateware]

* Add HashKey#bulk_values for fetching values in the same order than the given keys [aspgems]

* Lists now handle the insert command 

* Changed +@sset.score+ method on SortedSet to return nil for invalid members [hkarthik]

* Test using redis-objects counters and fix when AR passes a string
